--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -16,6 +16,11 @@
         android:textColor="#FFFFFF99"
         android:gravity="center" />
 
+    <include android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        layout="@layout/player" />
+    
     <ListView
         android:id="@+id/song_list"
         android:name="com.example.cordit.SongListFragment"
