Did A LOT. Still need to fix seekbar so that it returns to the right position when a song is interupted by record. Need to set the record function straight. Add another menu item to allow to toggle between app recordings and songs on phone. Allow for storage for song notes, change icon.

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -14,16 +14,27 @@
         android:layout_weight="1"
         android:textSize="40sp"
         android:textColor="#FFFFFF99"
+        android:textStyle="bold"
         android:gravity="center" />
 
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="left"
+            android:textColor="#eeeeee"
+            android:textStyle="bold"
+            android:layout_marginLeft="10dp"/>
+
+        
     <!-- Timer Display -->
     <LinearLayout
         android:id="@+id/timerDisplay"
         android:orientation="horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginBottom="10dp">
         <!-- Current Duration Label -->
         <TextView
@@ -34,6 +45,7 @@
             android:gravity="left"
             android:textColor="#eeeeee"
             android:textStyle="bold"/>
+
         <!-- Total Duration Label -->
         <TextView
             android:id="@+id/songTotalDurationLabel"
