--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,5 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
  
+    <item
+    android:id="@+id/action_overflow"
+    android:icon="@drawable/ic_action_overflow"
+    android:orderInCategory="1"
+    android:showAsAction="always"
+    android:title="PlaylistSetting"/>
+    <!--android:actionLayout="@layout/another"-->
   <item
     android:id="@+id/action_end"
     android:icon="@drawable/end"
