Media player is good. Now all i have to do is change the list to be recordings only. Make sure record function is working properly, enable deletion of files, enable adding notes feature.

--- a/res/layout/song.xml
+++ b/res/layout/song.xml
@@ -28,7 +28,7 @@
    android:contentDescription="click"
    android:layout_width="?android:attr/listPreferredItemHeight"
    android:layout_height="fill_parent"
-   android:src="@drawable/ic_launcher"
+   android:src="@drawable/ic_action_attach"
    android:scaleType="center"
    android:clickable="true"
    android:layout_alignParentRight="true"
