--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,9 +13,10 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:textSize="40sp"
-        android:textColor="#FFFFFF99"
+        android:textColor="#FFFF00"
         android:textStyle="bold"
         android:gravity="center" />
+        
 
         <TextView
             android:id="@+id/title"
