--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:textSize="40sp"
-        android:textColor="#FFFF00"
+        android:textColor="#7DF9FF"
         android:textStyle="bold"
         android:gravity="center" />
         
@@ -122,11 +122,7 @@
                 android:background="@null"/>
         </LinearLayout>
         </LinearLayout>
-        
-<!--  <include android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        layout="@layout/player" />-->
+
     
     <ListView
         android:id="@+id/song_list"
