--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -2,7 +2,7 @@
 
   <item
     android:id="@+id/action_end"
-    android:icon="@drawable/end"
+    android:icon="@drawable/ic_action_cancel"
     android:orderInCategory="2"
     android:showAsAction="always"
     android:title="End"/>
