--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -11,6 +11,19 @@
             backward-compatibility can go here.
         -->
     </style>
+<style name="btnStyleBlackpearl" parent="@android:style/Widget.Button">
+       <item name="android:textSize">15sp</item>
+       <item name="android:textStyle">bold</item>
+       <item name="android:textColor">#7DF9FF</item>
+       <item name="android:gravity">center</item>
+       <item name="android:shadowColor">#000000</item>
+       <item name="android:shadowDx">1</item>
+       <item name="android:shadowDy">1</item>
+       <item name="android:shadowRadius">0.6</item>
+       <item name="android:background">@drawable/custom_btn_black_pearl</item>
+       <item name="android:padding">10dip</item>
+   </style>
+   <style name="default_activity_theme" parent="@android:style/Theme.Holo"/>
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
